<package format="2">
  <name>ai_dev</name>
  <version>1.0.0</version>
  <description>The ai_ros package</description>

  <author>Alexander Kern</author>
  <maintainer email="a.kern@tu-bs.de">laxn_pander</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geodesy</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geodesy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
 <export>
   <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lai_dev_ros"/>
 </export>

</package>
